<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.lotfi.halel.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/arr"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="left|right"
            android:layout_marginRight="@dimen/margilinear"
            android:layout_marginTop="@dimen/margilineartop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="top"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.17"
                    android:gravity="top|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margilinear"
                        android:layout_marginTop="@dimen/margilineartop"
                        android:layout_weight="1"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/sizeptlinear"
                    android:layout_height="match_parent"
                    android:gravity="top|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margintxt"
                        android:layout_marginTop="@dimen/margintxt"
                        android:layout_weight="0.37"
                        android:gravity="right"
                        android:text="Login"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        android:textStyle="normal|bold" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/sizeimg"
                        android:layout_height="@dimen/sizeimg"
                        android:layout_gravity="top"
                        android:layout_marginBottom="@dimen/margintxt"
                        android:layout_marginTop="@dimen/mrg"
                        android:background="@mipmap/login" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margemid"
                android:layout_marginRight="@dimen/margemid"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margintxt"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margintxt"
                        android:layout_marginLeft="@dimen/margintxt"
                        android:layout_marginTop="@dimen/margintxt"
                        android:gravity="bottom"
                        android:text="@string/txti1"
                        android:textColor="@android:color/background_dark"></TextView>

                    <com.borjabravo.readmoretextview.ReadMoreTextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margintxt"
                        android:layout_marginLeft="@dimen/margintxt"
                        android:layout_marginTop="@dimen/margintxt"
                        android:text="@string/txti2"
                        android:textColor="@android:color/background_dark"
                        app:trimCollapsedText="@string/show_all_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margintxt"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/halal" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="Trouver Halal"
                android:layout_width="@dimen/sizebutton"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:background="@drawable/btn1"
                android:layout_marginBottom="@dimen/margbutton"
                android:textColor="@android:color/background_light"
                android:textSize="17dp"
                android:textAllCaps="false" />

            <Button
                android:text="Sauvegarder Halal"
                android:layout_width="@dimen/sizebutton"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:background="@drawable/btn2"
                android:layout_marginTop="@dimen/margilinear"
                android:textColor="@android:color/background_light"
                android:textSize="17dp"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="top|center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/sizebutton"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/sizelina"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="0.26"></LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/sinsi"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="17sp"
                    android:textStyle="normal|bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
